--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>3D Card</title>
+    <title>Carte 3D avec Zoom Mobile</title>
     <style>
-        body {
+        html, body {
             margin: 0;
+            padding: 0;
             background: #121212;
+            overflow: hidden;
+            user-select: none;
+            touch-action: none;
+            height: 100%;
+            width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            overflow: hidden;
-            user-select: none;
         }
 
         .card-container {
             width: 300px;
             height: 450px;
             perspective: 1000px;
-            cursor: grab;
             transform-origin: center;
         }
 
@@ -71,27 +73,23 @@
         let rotateY = 0;
         let scale = 1;
 
+        // Souris (desktop)
         container.addEventListener("mousedown", (e) => {
             isDragging = true;
             lastX = e.clientX;
             lastY = e.clientY;
         });
 
-        window.addEventListener("mouseup", () => {
-            isDragging = false;
-        });
+        window.addEventListener("mouseup", () => isDragging = false);
 
         window.addEventListener("mousemove", (e) => {
             if (!isDragging) return;
-
-            const deltaX = e.clientX - lastX;
-            const deltaY = e.clientY - lastY;
+            const dx = e.clientX - lastX;
+            const dy = e.clientY - lastY;
             lastX = e.clientX;
             lastY = e.clientY;
-
-            rotateY += deltaX * 0.5;
-            rotateX -= deltaY * 0.5;
-
+            rotateY += dx * 0.5;
+            rotateX -= dy * 0.5;
             updateTransform();
         });
 
@@ -101,6 +99,53 @@
             scale = Math.min(Math.max(scale, 0.5), 2);
             updateTransform();
         });
+
+        // Mobile : tactile
+        let lastTouchX = 0;
+        let lastTouchY = 0;
+        let lastDistance = null;
+
+        container.addEventListener("touchstart", (e) => {
+            if (e.touches.length === 1) {
+                lastTouchX = e.touches[0].clientX;
+                lastTouchY = e.touches[0].clientY;
+            } else if (e.touches.length === 2) {
+                lastDistance = getTouchDistance(e.touches);
+            }
+        });
+
+        container.addEventListener("touchmove", (e) => {
+            e.preventDefault();
+
+            if (e.touches.length === 1) {
+                const dx = e.touches[0].clientX - lastTouchX;
+                const dy = e.touches[0].clientY - lastTouchY;
+                lastTouchX = e.touches[0].clientX;
+                lastTouchY = e.touches[0].clientY;
+                rotateY += dx * 0.5;
+                rotateX -= dy * 0.5;
+                updateTransform();
+            } else if (e.touches.length === 2) {
+                const newDistance = getTouchDistance(e.touches);
+                if (lastDistance !== null) {
+                    const delta = newDistance - lastDistance;
+                    scale += delta * 0.005;
+                    scale = Math.min(Math.max(scale, 0.5), 2);
+                    updateTransform();
+                }
+                lastDistance = newDistance;
+            }
+        });
+
+        container.addEventListener("touchend", (e) => {
+            if (e.touches.length < 2) lastDistance = null;
+        });
+
+        function getTouchDistance(touches) {
+            const dx = touches[0].clientX - touches[1].clientX;
+            const dy = touches[0].clientY - touches[1].clientY;
+            return Math.sqrt(dx * dx + dy * dy);
+        }
 
         function updateTransform() {
             card.style.transform = `scale(${scale}) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
