--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Carte 3D avec Zoom Mobile</title>
+    <title>3D Card</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <style>
         html, body {
             margin: 0;
@@ -30,7 +31,7 @@
             height: 100%;
             position: relative;
             transform-style: preserve-3d;
-            transition: transform 0.1s linear;
+            transition: transform 0.3s ease;
         }
 
         .card-face {
@@ -51,9 +52,31 @@
             background-image: url('Pic/Back/card-back.png');
             transform: rotateY(180deg);
         }
+
+        #flipButton {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            padding: 10px 16px;
+            background: #ffffff10;
+            border: 1px solid #ffffff30;
+            border-radius: 8px;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background 0.2s;
+            z-index: 10;
+        }
+
+            #flipButton:hover {
+                background: #ffffff20;
+            }
     </style>
 </head>
 <body>
+
+    <button id="flipButton">Rotate</button>
 
     <div class="card-container" id="container">
         <div class="card" id="card">
@@ -65,6 +88,7 @@
     <script>
         const container = document.getElementById("container");
         const card = document.getElementById("card");
+        const flipButton = document.getElementById("flipButton");
 
         let isDragging = false;
         let lastX = 0;
@@ -72,8 +96,14 @@
         let rotateX = 0;
         let rotateY = 0;
         let scale = 1;
+        let isFlipped = false;
 
-        // Souris (desktop)
+        flipButton.addEventListener("click", () => {
+            isFlipped = !isFlipped;
+            const flipY = isFlipped ? 180 : 0;
+            card.style.transform = `scale(${scale}) rotateX(${rotateX}deg) rotateY(${rotateY + flipY}deg)`;
+        });
+
         container.addEventListener("mousedown", (e) => {
             isDragging = true;
             lastX = e.clientX;
@@ -100,7 +130,6 @@
             updateTransform();
         });
 
-        // Mobile : tactile
         let lastTouchX = 0;
         let lastTouchY = 0;
         let lastDistance = null;
@@ -148,7 +177,8 @@
         }
 
         function updateTransform() {
-            card.style.transform = `scale(${scale}) rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+            const flipY = isFlipped ? 180 : 0;
+            card.style.transform = `scale(${scale}) rotateX(${rotateX}deg) rotateY(${rotateY + flipY}deg)`;
         }
     </script>
 
