--- a/index.html
+++ b/index.html
@@ -2,184 +2,92 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>3D Card</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+    <title>Choose a card</title>
     <style>
-        html, body {
+        body {
             margin: 0;
             padding: 0;
-            background: #121212;
-            overflow: hidden;
-            user-select: none;
-            touch-action: none;
-            height: 100%;
+            background-color: #121212;
+            color: white;
+            font-family: sans-serif;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            margin: 30px 0 10px;
+            font-size: 24px;
+        }
+
+        .grid-wrapper {
+            flex: 1;
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 0 20px;
+            box-sizing: border-box;
         }
 
-        .card-container {
-            width: 300px;
-            height: 450px;
-            perspective: 1000px;
-            transform-origin: center;
-        }
-
-        .card {
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+            gap: 12px;
+            max-width: 800px;
             width: 100%;
-            height: 100%;
-            position: relative;
-            transform-style: preserve-3d;
-            transition: transform 0.3s ease;
+            justify-items: center;
         }
 
-        .card-face {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            border-radius: 12px;
-            background-size: cover;
-            background-position: center;
-        }
-
-        .card-front {
-            background-image: url('Pic/Front/card-front.png');
-        }
-
-        .card-back {
-            background-image: url('Pic/Back/card-back.png');
-            transform: rotateY(180deg);
-        }
-
-        #flipButton {
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            padding: 10px 16px;
-            background: #ffffff10;
-            border: 1px solid #ffffff30;
-            border-radius: 8px;
+        .card-button {
+            background-color: #2a2a2a;
+            border: 1px solid #444;
+            border-radius: 6px;
+            padding: 8px;
             color: white;
-            font-size: 16px;
+            font-size: 13px;
             cursor: pointer;
             transition: background 0.2s;
-            z-index: 10;
+            width: 100%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
         }
 
-            #flipButton:hover {
-                background: #ffffff20;
+            .card-button:hover {
+                background-color: #3c3c3c;
             }
     </style>
 </head>
 <body>
 
-    <button id="flipButton">Rotate</button>
+    <h1>Choose the card</h1>
 
-    <div class="card-container" id="container">
-        <div class="card" id="card">
-            <div class="card-face card-front"></div>
-            <div class="card-face card-back"></div>
+    <div class="grid-wrapper">
+        <div class="grid-container" id="grid">
         </div>
     </div>
 
     <script>
-        const container = document.getElementById("container");
-        const card = document.getElementById("card");
-        const flipButton = document.getElementById("flipButton");
+        const cardList = [
+            "dva", "Ganyu", "Yoruichi", "Rikku", "Rei", "Kiseki", "Cynthia", "Sekhmet_of_death",
+            "Coco", "Weiss", "Ram", "Purah", "Elbe", "2B"
+        ];
 
-        let isDragging = false;
-        let lastX = 0;
-        let lastY = 0;
-        let rotateX = 0;
-        let rotateY = 0;
-        let scale = 1;
-        let isFlipped = false;
+        const grid = document.getElementById("grid");
 
-        flipButton.addEventListener("click", () => {
-            isFlipped = !isFlipped;
-            const flipY = isFlipped ? 180 : 0;
-            card.style.transform = `scale(${scale}) rotateX(${rotateX}deg) rotateY(${rotateY + flipY}deg)`;
+        cardList.forEach((filename) => {
+            const btn = document.createElement("button");
+            btn.className = "card-button";
+            btn.textContent = filename.replace(/_/g, ' ');
+            btn.onclick = () => {
+                window.location.href = `viewer.html?front=${encodeURIComponent(filename)}.png`;
+            };
+            grid.appendChild(btn);
         });
-
-        container.addEventListener("mousedown", (e) => {
-            isDragging = true;
-            lastX = e.clientX;
-            lastY = e.clientY;
-        });
-
-        window.addEventListener("mouseup", () => isDragging = false);
-
-        window.addEventListener("mousemove", (e) => {
-            if (!isDragging) return;
-            const dx = e.clientX - lastX;
-            const dy = e.clientY - lastY;
-            lastX = e.clientX;
-            lastY = e.clientY;
-            rotateY += dx * 0.5;
-            rotateX -= dy * 0.5;
-            updateTransform();
-        });
-
-        container.addEventListener("wheel", (e) => {
-            e.preventDefault();
-            scale += e.deltaY * -0.001;
-            scale = Math.min(Math.max(scale, 0.5), 2);
-            updateTransform();
-        });
-
-        let lastTouchX = 0;
-        let lastTouchY = 0;
-        let lastDistance = null;
-
-        container.addEventListener("touchstart", (e) => {
-            if (e.touches.length === 1) {
-                lastTouchX = e.touches[0].clientX;
-                lastTouchY = e.touches[0].clientY;
-            } else if (e.touches.length === 2) {
-                lastDistance = getTouchDistance(e.touches);
-            }
-        });
-
-        container.addEventListener("touchmove", (e) => {
-            e.preventDefault();
-
-            if (e.touches.length === 1) {
-                const dx = e.touches[0].clientX - lastTouchX;
-                const dy = e.touches[0].clientY - lastTouchY;
-                lastTouchX = e.touches[0].clientX;
-                lastTouchY = e.touches[0].clientY;
-                rotateY += dx * 0.5;
-                rotateX -= dy * 0.5;
-                updateTransform();
-            } else if (e.touches.length === 2) {
-                const newDistance = getTouchDistance(e.touches);
-                if (lastDistance !== null) {
-                    const delta = newDistance - lastDistance;
-                    scale += delta * 0.005;
-                    scale = Math.min(Math.max(scale, 0.5), 2);
-                    updateTransform();
-                }
-                lastDistance = newDistance;
-            }
-        });
-
-        container.addEventListener("touchend", (e) => {
-            if (e.touches.length < 2) lastDistance = null;
-        });
-
-        function getTouchDistance(touches) {
-            const dx = touches[0].clientX - touches[1].clientX;
-            const dy = touches[0].clientY - touches[1].clientY;
-            return Math.sqrt(dx * dx + dy * dy);
-        }
-
-        function updateTransform() {
-            const flipY = isFlipped ? 180 : 0;
-            card.style.transform = `scale(${scale}) rotateX(${rotateX}deg) rotateY(${rotateY + flipY}deg)`;
-        }
     </script>
 
 </body>
