Correction_card_name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <script>
         const cardList = [
-            "dva", "Ganyu", "Yoruichi", "Rikku", "Rei", "Kiseki", "Cynthia", "Sekhmet_of_death",
+            "Dva", "Ganyu", "Yoruichi", "Rikku", "Rei", "Kiseki", "Cynthia", "Sekhmet_of_Death",
             "Coco", "Weiss", "Ram", "Purah", "Elbe", "2B"
         ];
 
