--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script>
         const cardList = [
             "Dva", "Ganyu", "Yoruichi", "Rikku", "Rei", "Kiseki", "Cynthia", "Sekhmet_of_Death",
-            "Coco", "Weiss", "Ram", "Purah", "Elbe", "2B"
+            "Coco", "Weiss", "Ram", "Purah", "Elbe", "2B", "Calliope"
         ];
 
         const grid = document.getElementById("grid");
