--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
             });
         });
     </script>
-
+    <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
+        <p>
+            <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Accueil</a>
+            |
+            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Me contacter</a>
+            |
+            <a href="https://twitter.com/SnowBunnBunn" target="_blank" style="color:#aaa; text-decoration:none; margin-left: 15px;">🐦 Twitter</a>
+        </p>
+    </footer>
 </body>
 </html>
