--- a/contact.html
+++ b/contact.html
@@ -59,29 +59,26 @@
 </head>
 <body>
 
-    <h1>Contactez-moi</h1>
+    <h1>Contact me</h1>
 
     <form action="https://formsubmit.co/snowbunny.twitter@gmail.com" method="POST">
-        <input type="text" name="name" placeholder="Votre nom" required>
-        <input type="email" name="email" placeholder="Votre email" required>
-        <textarea name="message" rows="6" placeholder="Votre message" required></textarea>
+        <input type="text" name="name" placeholder="Your name" required>
+        <input type="email" name="email" placeholder="Your email" required>
+        <textarea name="message" rows="6" placeholder="Your message" required></textarea>
 
         <!-- options Formsubmit -->
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="box">
         <input type="hidden" name="_next" value="https://snowbunnbunn.github.io/curly-guacamole/index.html">
 
-        <button type="submit">Envoyer</button>
+        <button type="submit">Send</button>
     </form>
 
-    <footer>
-        <p><a href="index.html">⬅ Retour à l'accueil</a></p>
-    </footer>
     <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
         <p>
-            <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Accueil</a>
+            <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Index</a>
             |
-            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Me contacter</a>
+            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Contact me</a>
             |
             <a href="https://twitter.com/SnowBunnBunn" target="_blank" style="color:#aaa; text-decoration:none; margin-left: 15px;">🐦 Twitter</a>
         </p>
