--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
     <h1>Choose a character</h1>
 
-    <div id="controls">
+    <!--<div id="controls">
         <button id="expandAll">🔼 Tout déplier</button>
         <button id="collapseAll">🔽 Tout replier</button>
-    </div>
+    </div>-->
 
     <input type="text" id="searchInput" placeholder="Search a character...">
     <div id="cardList"></div>
@@ -212,9 +212,9 @@
     </script>
     <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
         <p>
-            <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Accueil</a>
+            <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Index</a>
             |
-            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Me contacter</a>
+            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Conrtact me</a>
             |
             <a href="https://twitter.com/SnowBunnBunn" target="_blank" style="color:#aaa; text-decoration:none; margin-left: 15px;">🐦 Twitter</a>
         </p>
