--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             section.appendChild(header);
 
             const group = document.createElement("div");
-            group.classList.add("button-group"); // ouvert par défaut
+            group.classList.add("button-group");
 
             const buttons = [];
 
