--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             "Overwatch": ["Dva"],
             "Pokemon": ["Cynthia"],
             "Hololive": ["Calliope", "Coco"],
-            "Autres": [
+            "Love Live!": ["Maki"],
+            "Other": [
                 "Ram", "Yoruichi", "Rikku", "Rei", "Kiseki",
                 "Sekhmet_of_Death", "Weiss", "Purah", "Elbe", "2B"
             ]
