Add Hex Maniac + viewer correction

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         const cardData = {
             "Genshin Impact": ["Ganyu", "Yelan"],
             "Overwatch": ["Dva"],
-            "Pokemon": ["Cynthia"],
+            "Pokemon": ["Cynthia","Hex_Maniac"],
             "Hololive": ["Calliope", "Coco"],
             "Love Live!": ["Maki"],
             "Other": [
