--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             "Genshin Impact": ["Ganyu", "Yelan"],
             "Overwatch": ["Dva"],
             "Pokemon": ["Cynthia","Hex_Maniac"],
-            "Hololive": ["Calliope", "Coco"],
+            "Hololive": ["Calliope", "Coco", "Okayu"],
             "Love Live!": ["Maki"],
             "Other": [
                 "Ram", "Yoruichi", "Rikku", "Rei", "Kiseki",
