Add Akeno and Rossweiss

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             "Pokemon": ["Cynthia","Hex_Maniac"],
             "Hololive": ["Calliope", "Coco", "Okayu"],
             "Love Live!": ["Maki"],
+            "High School DxD": ["Rossweiss","Akeno"],
             "Other": [
                 "Ram", "Yoruichi", "Rikku", "Rei", "Kiseki",
                 "Sekhmet_of_Death", "Weiss", "Purah", "Elbe", "2B"
