Readding fold and unfold

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
     <h1>Choose a character</h1>
 
-    <!--<div id="controls">
-        <button id="expandAll">🔼 Tout déplier</button>
-        <button id="collapseAll">🔽 Tout replier</button>
-    </div>-->
+    <div id="controls">
+        <button id="expandAll">🔼 Unfold all</button>
+        <button id="collapseAll">🔽 Fold all</button>
+    </div>
 
     <input type="text" id="searchInput" placeholder="Search a character...">
     <div id="cardList"></div>
