--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             "Pokemon": ["Cynthia","Hex_Maniac"],
             "Hololive": ["Calliope", "Coco", "Okayu","Mio"],
             "Love Live!": ["Maki"],
-            "High School DxD": ["Rossweiss","Akeno"],
+            "High School DxD": ["Rossweiss", "Akeno"],
+            "Fate": ["Nero","Scathach"],
             "Other": [
                 "Ram", "Yoruichi", "Rikku", "Rei", "Kiseki",
                 "Sekhmet_of_Death", "Weiss", "Purah", "Elbe", "2B"
