--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
         const cardData = {
             "Genshin Impact": ["Ganyu", "Yelan"],
             "Overwatch": ["Dva"],
-            "Pokemon": ["Cynthia","Hex_Maniac"],
-            "Hololive": ["Calliope", "Coco", "Okayu","Mio"],
+            "League of Legends": ["Jinx","Miss_Fortune"],
+            "Pokemon": ["Cynthia", "Hex_Maniac"],
+            "Hololive": ["Calliope", "Coco", "Okayu", "Mio"],
             "Love Live!": ["Maki"],
             "High School DxD": ["Rossweiss", "Akeno"],
-            "Fate": ["Nero","Scathach"],
+            "Fate": ["Nero", "Scathach"],
             "Other": [
                 "Ram", "Yoruichi", "Rikku", "Rei", "Kiseki",
                 "Sekhmet_of_Death", "Weiss", "Purah", "Elbe", "2B"
@@ -142,14 +143,14 @@
 
             const toggle = document.createElement("span");
             toggle.classList.add("toggle");
-            toggle.textContent = "➖";
+            toggle.textContent = "➕";
 
             header.appendChild(title);
             header.appendChild(toggle);
             section.appendChild(header);
 
             const group = document.createElement("div");
-            group.classList.add("button-group");
+            group.classList.add("button-group", "hidden");
 
             const buttons = [];
 
@@ -205,7 +206,6 @@
             });
         });
 
-        // Déplier tout
         expandAllBtn.addEventListener("click", () => {
             categoryElements.forEach(({ group, toggle }) => {
                 group.classList.remove("hidden");
@@ -213,7 +213,6 @@
             });
         });
 
-        // Replier tout
         collapseAllBtn.addEventListener("click", () => {
             categoryElements.forEach(({ group, toggle }) => {
                 group.classList.add("hidden");
@@ -221,14 +220,16 @@
             });
         });
     </script>
+
     <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
         <p>
             <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Index</a>
             |
-            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Conrtact me</a>
+            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Contact me</a>
             |
             <a href="https://twitter.com/SnowBunnBunn" target="_blank" style="color:#aaa; text-decoration:none; margin-left: 15px;">🐦 Twitter</a>
         </p>
     </footer>
+
 </body>
 </html>
