--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Choose a card</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="dfb68c24-94c7-4b73-a2a9-9dd7914ab7cf"></script>
     <style>
         body {
             background-color: #121212;
