--- a/viewer.html
+++ b/viewer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>3D Card</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="dfb68c24-94c7-4b73-a2a9-9dd7914ab7cf"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <style>
         html, body {
