--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <script>
         const cardData = {
-            "Genshin Impact": ["Ganyu", "Yelan"],
+            "Genshin Impact": ["Ganyu", "Yelan", "Eula"],
             "Overwatch": ["Dva"],
             "League of Legends": ["Jinx","Miss_Fortune"],
             "Pokemon": ["Cynthia", "Hex_Maniac"],
