--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             "League of Legends": ["Jinx","Miss_Fortune"],
             "Pokemon": ["Cynthia", "Hex_Maniac"],
             "Hololive": ["Calliope", "Coco", "Okayu", "Mio"],
-            "Love Live!": ["Maki"],
+            "Love Live!": ["Maki","Setsuna"],
             "High School DxD": ["Rossweiss", "Akeno"],
             "Fate": ["Nero", "Scathach"],
             "Other": [
