--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             "Fate": ["Nero", "Scathach"],
             "Other": [
                 "Ram", "Yoruichi", "Rikku", "Rei", "Kiseki",
-                "Sekhmet_of_Death", "Weiss", "Purah", "Elbe", "2B"
+                "Sekhmet_of_Death", "Weiss", "Purah", "Elbe", "2B", "Mitsuri"
             ]
         };
 
