Add Fenrir + Variant

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             "Naruto": ["Tsunade", "Kushina", "Naruko", "Hinata"],
             "Fate": ["Nero", "Scathach"],
             "Final Fantasy": ["Rikku"],
-            "Last Origin": ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho"],
+            "Last Origin": ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"],
             "Azur Lane": ["Elbe"],
             "Umamusume": ["Kiseki"],
             "Other": [
