--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             "High School DxD": ["Rossweiss", "Akeno"],
             "Naruto": ["Tsunade", "Kushina", "Naruko", "Hinata"],
             "Fate": ["Nero", "Scathach"],
-            "Final Fantasy": ["Rikku"],
+            "Final Fantasy": ["Rikku", "Aerith", "Tifa"],
             "Last Origin": ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"],
             "Azur Lane": ["Elbe"],
             "Umamusume": ["Kiseki"],
