--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <script>
         const cardData = {
             "Genshin Impact": ["Ganyu", "Yelan", "Eula"],
-            "Overwatch": ["Dva"],
+            "Overwatch": ["Dva", "Mercy", "Kiriko"],
             "League of Legends": ["Jinx", "Miss_Fortune"],
             "Pokemon": ["Cynthia", "Hex_Maniac"],
             "Hololive": ["Calliope", "Coco", "Okayu", "Mio"],
